# Outplayed-Highlight-Cutter

./: .gitignore  NOTICE.md  README.md  pyproject.toml  setup.ps1  start.bat  start.ps1
src/outplayed_highlight_cutter/: __init__.py  app.py  ffmpeg.py  gui.py  logging_config.py  models.py  naming.py  outplayed_db.py  padding_defaults.py  profiles.py  queue_utils.py
src/outplayed_highlight_cutter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ffmpeg.py  test_import_failures_dialog.py  test_models.py  test_naming.py  test_outplayed_db.py  test_padding_defaults.py  test_profiles.py  test_queue_utils.py  test_ux_flow.py
tools/: build_icon.py
