[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "outplayed-highlight-cutter"
version = "0.1.0"
description = "Create clips and highlight reels from Outplayed event markers."
requires-python = ">=3.13"
dependencies = [
  "PySide6==6.11.1",
  "python-snappy>=0.7.3,<0.8",
  "zstandard>=0.25,<0.26",
]

[project.optional-dependencies]
dev = ["pytest>=9,<10"]

[project.scripts]
outplayed-highlight-cutter = "outplayed_highlight_cutter.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
outplayed_highlight_cutter = ["assets/app_icon.png", "assets/app_icon.ico"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
